# lambda-testing

./: .editorconfig  .gitignore  README.md  package.sh  pyproject.toml  setup.sh
calculation/: __init__.py  coordinate.py  distance.py  eventtype.py
etc/: create_ddb_table.sh  test_eventrule.sh
etc/events/: events.json
tests/infrastructure/: infrastructure_test.py
tests/integration/: composition_test.py
tests/unit/: coordinate_test.py  distance_test.py
